--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
-    script-src 'self' http://deltarobot:3010;
+    script-src 'self' http://192.168.0.43:80;
     style-src 'self' 'sha256-NOysBCqoEZQ4w+cB7d5fekIXPgoo1DEVyHhO0OEBfD4=';
     font-src 'self' https://fonts.gstatic.com;
-    connect-src 'self' http://deltarobot:3010 ws://deltarobot:3010;
-    img-src 'self' http://deltarobot:3010 data:;
+    connect-src 'self' http://192.168.0.43:80 ws://192.168.0.43:80;
+    img-src 'self' http://192.168.0.43:80 data:;
     ">  
 
     <meta
